# ChangeLog for dev-python/scripttest
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jul 2010; James Rowe <jnrowe@gmail.com> -scripttest-1.0.3.ebuild,
  scripttest-1.0.4.ebuild:
  Keyworded x86.

  05 Jul 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.4.ebuild:
  Keyworded amd64.

  03 Jun 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.3.ebuild:
  Keyworded x86.

  02 Jun 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.3.ebuild:
  Keyworded amd64.

*scripttest-1.0.4 (02 Jun 2010)

  02 Jun 2010; James Rowe <jnrowe@gmail.com> +scripttest-1.0.4.ebuild:
  Version bump [d2e].

  05 May 2010; James Rowe <jnrowe@gmail.com> scripttest-1.0.3.ebuild:
  Keyworded ~x86.

*scripttest-1.0.3 (04 May 2010)

  04 May 2010; James Rowe <jnrowe@gmail.com> +scripttest-1.0.3.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
