@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST ScriptTest-1.0.4.tar.gz 12015 RMD160 5531ed7d88dcc7c107db1edbd906f21d579b5020 SHA1 ed53307e065258e13c266ac8855c28e0184be926 SHA256 695fb8201aa3d9ea6af51fb00a8dcf9cc29fbb862f3f999faeddc2705c5f4714
+DIST ScriptTest-1.1.tar.gz 7192 RMD160 0d73a88e21f142d82171eaa31a001bfd61c74779 SHA1 06166a35f1f9ec0c9da4d3c3afdcaf71d762dfc5 SHA256 3da2d74929d4e9a5d87c683680b09c780fccabfa188108867c5f67c1ea3918dd
 EBUILD scripttest-1.0.4.ebuild 501 RMD160 7524725eb09aa4eab8a32b4cd0f3ed1dff9ad04a SHA1 b0d3655c67f09db5a6665635d647e78f0c8b27ad SHA256 297b789d824cfcc6956f0391f3d0fa8fe8c699b9bd32e8cbd5e9256c23c9e630
-MISC ChangeLog 869 RMD160 75b9d848874e7755817e59b9e6cbc469c9b16e1c SHA1 ff0e3787ef1ed2655b2f3809a0921b4bdaa7f4eb SHA256 cc3653c30a7eea03f0551fdad4b68cdaf7b0c1564e003695b7a4d1d28d01930a
+EBUILD scripttest-1.1.ebuild 471 RMD160 17ca8bbb10fbb2d2feb35647bb0ce4c04d7c72d1 SHA1 de556b8aa2b2a2e940afdd6df2638acdfce35330 SHA256 ba970e74cbc627c1141a1e41def8934b7dd308149152a216e090268baa5c99cd
+MISC ChangeLog 992 RMD160 6fb83ba0a0f37db50b706151e380ee6f7196a469 SHA1 1e491cc33cbeb6ea277004534754ed7c6e48baee SHA256 4c899ba3e0dea3ecd44848b0066a54fb7fe445bc1613c197a37fd11d4cb15497
 MISC metadata.xml 735 RMD160 c1403a4b962fda8da806b64586aae21edb812b13 SHA1 8b83408204af46b967bb600599b626795d599988 SHA256 1d473bcede227f5858f21648dc38b4a4f1fe248404ef3b1498943ebb4a9a1912
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkwyES0ACgkQzJrj3cAXR0lGzQCeMTqCMdtrP8AFnrMPIIWRdrnO
-gKcAoKhAMmWWPSK+TwjMXe6iG1tdNkt9
-=D8uU
+iEYEARECAAYFAkxXOIcACgkQzJrj3cAXR0lpyACeKyh1+S9YV2jvPmtY3XIBbuyM
+JNMAn12/74jnqRCD73pBobuPZFncaXvm
+=NBG0
 -----END PGP SIGNATURE-----
