@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*scripttest-1.1 (02 Aug 2010)
+
+  02 Aug 2010; James Rowe <jnrowe@gmail.com> +scripttest-1.1.ebuild:
+  Version bump [cc2].
+
   05 Jul 2010; James Rowe <jnrowe@gmail.com> -scripttest-1.0.3.ebuild,
   scripttest-1.0.4.ebuild:
   Keyworded x86.
